Fazer pelo browser

--- a/View/index.html
+++ b/View/index.html
@@ -5,8 +5,9 @@
 	<title>Caixeiro viajante</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.min.js" type="text/javascript"></script>
+    <script src="genetic-0.1.14.min.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
-
+    
     <style> 
     body {
         padding: 0;
